--- a/.gitignore
+++ b/.gitignore
@@ -142,3 +142,7 @@ target/surefire-reports/com.john.AppTest.txt
 target/surefire-reports/TEST-com.john.AppTest.xml
 target/test-classes/com/john/AppTest.class
 target/classes/com/john/common/WinRegistry$StreamReader.class
+target/classes/com/john/common/DecryptUtil.class
+target/classes/com/john/common/WinRegistry$StreamReader.class
+target/classes/com/john/common/test.txt
+target/classes/com/john/common/WinRegistry$StreamReader.class
